--- a/scss/blocks/_header-menyu.scss
+++ b/scss/blocks/_header-menyu.scss
@@ -64,7 +64,7 @@
     position: fixed;
     top: 0;
     right: 0;
-    z-index: 1;
+    z-index: 999;
     flex-direction: column;
     align-items: flex-start;
     width: 0;
